--- a/package.json
+++ b/package.json
@@ -1,9 +1,21 @@
 {
-  "name": "rust_loader",
+  "name": "rust-loader",
   "version": "1.0.0",
   "description": "Webpack loader for Rust",
-  "main": "src/index.js",
-  "repository": "https://github.com/Ralvke/rust_loader",
+  "main": "lib.js",
+  "repository": "https://github.com/Ralvke/rust-loader",
   "author": "Maxim lis <ralvke@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "watch": "babel src/index.js --out-file lib.js --watch",
+    "build": "babel src/index.js --out-file lib.js",
+    "prepublish": "yarn build"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.0.0-beta.34",
+    "@babel/core": "^7.0.0-beta.34",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.34",
+    "@babel/preset-env": "^7.0.0-beta.34"
+  },
+  "dependencies": {}
 }
