--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@babel/cli": "^7.0.0-beta.34",
     "@babel/core": "^7.0.0-beta.34",
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.34",
-    "@babel/preset-env": "^7.0.0-beta.34"
-  },
-  "dependencies": {}
+    "@babel/preset-env": "^7.0.0-beta.34",
+    "@octetstream/eslint-config": "^2.1.0",
+    "eslint": "^4.12.1"
+  }
 }
