--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "@octetstream/eslint-config": "2.1.0",
     "eslint": "4.12.1",
     "husky": "0.14.3"
+  },
+  "dependencies": {
+    "@octetstream/promisify": "1.3.2"
   }
 }
