--- a/package.json
+++ b/package.json
@@ -2,18 +2,22 @@
   "name": "rust-loader",
   "version": "1.1.2",
   "description": "Webpack loader for Rust",
-  "main": "rustLoader.js",
+  "main": "loader.js",
   "repository": "https://github.com/Ralvke/rust-loader",
   "author": "Maxim lis <ralvke@gmail.com>",
   "license": "MIT",
   "scripts": {
+    "test": "ava test/index.js",
     "lint": "node_modules/.bin/eslint src",
-    "precommit": "yarn lint"
+    "precommit": "yarn lint && yarn test"
   },
   "devDependencies": {
     "@octetstream/eslint-config": "2.1.0",
+    "ava": "^0.24.0",
     "eslint": "4.12.1",
-    "husky": "0.14.3"
+    "file-loader": "^1.1.5",
+    "husky": "0.14.3",
+    "webpack": "^3.10.0"
   },
   "dependencies": {
     "@octetstream/promisify": "1.3.2"
